# movies-auth-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
auth/: .env.example  Dockerfile  requirements.txt
auth/src/: app.py  cli.py  tracing.py
auth/src/api/: decorators.py  validators.py
auth/src/api/schemas/: device.py  role.py  user.py
auth/src/api/utils/: converters.py  jwt_verifier.py  oauth.py  social_providers.py
auth/src/api/v1/: admin.py  auth.py  oauth.py  service.py  user.py
auth/src/core/: config.py  containers.py  permissions.py
auth/src/db/: postgres.py  redis.py
auth/src/db/abstract/: cache.py
auth/src/migrations/: env.py
auth/src/migrations/versions/: c6d4cb4740c0_add_socialaccount_table.py  d19bd79a0727_initial_migration.py  dbc9d353c0e6_initial_migration.py
auth/src/models/: device.py  mixins.py  role.py  social.py  user.py
auth/src/services/: auth.py  limiter.py  tokens.py
nginx/: nginx.conf
nginx/conf.d/: auth.conf
tests/functional/: .dockerignore  .env.example  Dockerfile  conftest.py  docker-compose.dev.yml  docker-compose.yml  requirements.txt  settings.py
tests/functional/src/: test_admin.py  test_auth.py  test_user.py
tests/functional/testdata/: tests_cases.py
tests/functional/utils/: admin.py  backoff.py  wait_for_pg.py  wait_for_redis.py
